--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <script>
-    window.location.href = '/pages/home/index.html';
+    window.location.href = 'pages/home/index.html';
   </script>
 </body>
 
